# quantitative_trading

./: .gitignore  PROJECT_FUNCTIONS.md  README.md  config.json  fetch_board_info.py  pyproject.toml  requirements.txt  run_realtime.ps1
config/: watchlist.json
docs/: database_overview.md  tushare_backfill_report.md  tushare_data_architecture.md  tushare_fund_data.md
docs/database_objects/: README.md  analytics.tushare_balance_sheet.md  analytics.tushare_cashflow_statement.md  analytics.tushare_cyq_perf.md  analytics.tushare_daily_basic.md  analytics.tushare_daily_price.md  analytics.tushare_fina_indicator.md  analytics.tushare_financial_quality_latest.md  analytics.tushare_income_statement.md  analytics.tushare_main_business.md  (+27 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
get_signal/: get_signal.py  scan_stk_factor_pro.py
learning/: 000001.csv  01_股票预处理.py  02_股票分析.py  03_双均线策略.py  双均线策略.py  股票预处理.py
monitoring_system/: README.md  app.py  backtest.py  db.py  fetch_history.py  indicators.py  realtime_collector.py  run_backtest_portfolio.py  run_backtest_single_full.py  utils.py
scripts/: akshare_realtime_moneyflow_snapshots.py  compare_tushare_qmt_snapshots.py  main_get_info.py  realtime_moneyflow_snapshots.py  tushare_backfill.py  tushare_financial_backfill.py  tushare_fund_backfill.py  tushare_fund_portfolio_backfill_periods.py  tushare_realtime_snapshot_sqlite.py  tushare_stock_snapshots.py
sql/: analysis_views.sql
tools/: tushare_doc2_range_to_pdf.py  xtquant_nativeapi_to_pdf.py
教程/: 北美老华玩量化.md  股票交易+项目实战.md
(+41 files in other folders)
