[project]
name = "quantitative-trading"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.0",
    "tushare>=1.4.0",
]

[project.scripts]
qt-tushare-raw = "quantitative_trading.tushare.collect_raw:main"
qt-tushare-financials = "quantitative_trading.tushare.collect_financials:main"
qt-apply-analysis-views = "quantitative_trading.analysis.apply_views:main"
main_get_info = "quantitative_trading.main_get_info:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantitative_trading"]
